Bug 259210 - Window title gets "Loading.../" prepended multiple times when accessing mails/folders
Summary: Window title gets "Loading.../" prepended multiple times when accessing mails...
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
: 259684 (view as bug list)
Depends on:
Blocks:
 
Reported: 2010-12-08 14:03 UTC by Will Stephenson
Modified: 2012-10-31 22:13 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.9.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Will Stephenson 2010-12-08 14:03:38 UTC
Version:           unspecified (using Devel) 
OS:                Linux

Today's trunk Whatever prepends 'Loading.../' to the window title while fetching a message is called multiple times, when it was written assuming that it would only be called once.

Reproducible: Always
Comment 1 m.wege 2010-12-15 10:20:23 UTC
*** Bug 259684 has been marked as a duplicate of this bug. ***
Comment 2 Will Stephenson 2011-10-24 06:44:43 UTC
Still in 4.7
Comment 3 David Faure 2012-10-08 08:13:28 UTC
Git commit 604b12876848b4507905b96fc5922b8e2d07e137 by David Faure.
Committed on 08/10/2012 at 10:04.
Pushed by dfaure into branch 'KDE/4.9'.

Fix initial state of actions (and window title).

ETM now tells us when a folder is available, and when kmail receives this for
the current folder, it updates its copy of the collection object in
mCurrentFolder, the window title, the state of the actions, etc.

Technically we could listen to dataChanged, but that's
called so often for so many different reasons, it would just slow things down.
Especially since we don't need to be notified of future changes (new email,
mail read, etc.), because we already get that from Akonadi::Monitor).

M  +14   -0    kmail/kmmainwidget.cpp
M  +1    -0    kmail/kmmainwidget.h

http://commits.kde.org/kdepim/604b12876848b4507905b96fc5922b8e2d07e137
Comment 4 David Faure 2012-10-31 18:33:30 UTC
Git commit 39aa2c85783b2381ad7fa199ee1ee028a32c2c54 by David Faure.
Committed on 31/10/2012 at 19:31.
Pushed by dfaure into branch 'master'.

Fix "Loading.../Loading..." in caption

M  +3    -0    kmail/kmmainwidget.cpp

http://commits.kde.org/kdepim/39aa2c85783b2381ad7fa199ee1ee028a32c2c54
Comment 5 David Faure 2012-10-31 19:33:44 UTC
Git commit 4af1438fe493a6216c9ac12c3e27b998db2690c4 by David Faure.
Committed on 31/10/2012 at 19:31.
Pushed by dfaure into branch 'KDE/4.9'.

Fix "Loading.../Loading..." in caption
(cherry picked from commit 39aa2c85783b2381ad7fa199ee1ee028a32c2c54)

M  +3    -0    kmail/kmmainwidget.cpp

http://commits.kde.org/kdepim/4af1438fe493a6216c9ac12c3e27b998db2690c4