Fix "Loading.../Loading..." in caption

BUG: 259210